8224040: Misc improvements to layout API